compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__custom_types__conflict_with_import.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
expression: "import foo.{type A} type A { C }"
---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import foo.{type A} type A { C }
  │             ^^^^^^  ^^^^^^ Redefined here
  │             │        
  │             First defined here

The type `A` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
